src/grammar/.antlr/TyCParser.py
# Generated from /home/tuan/Documents/scl/252/ppl/tyc-compiler/src/grammar/TyC.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class TyCParser ( Parser ):

    grammarFileName = "TyC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "','", "'('", "')'", "'{'", "'}'", 
                     "':'", "'int'", "'float'", "'string'", "'auto'", "'void'", 
                     "'main'", "'break'", "'case'", "'continue'", "'default'", 
                     "'else'", "'for'", "'if'", "'return'", "'struct'", 
                     "'switch'", "'while'", "'=='", "'!='", "'<='", "'>='", 
                     "'||'", "'&&'", "'++'", "'--'", "'='", "'<'", "'>'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'.'" ]

    symbolicNames = [ "<INVALID>", "SEMI", "COMMA", "LPAREN", "RPAREN", 
                      "LBRACE", "RBRACE", "COLON", "INT", "FLOAT", "STRING", 
                      "AUTO", "VOID", "MAIN", "BREAK", "CASE", "CONTINUE", 
                      "DEFAULT", "ELSE", "FOR", "IF", "RETURN", "STRUCT", 
                      "SWITCH", "WHILE", "EQ", "NEQ", "LE", "GE", "OR", 
                      "AND", "INC", "DEC", "ASSIGN", "LT", "GT", "PLUS", 
                      "MINUS", "MUL", "DIV", "MOD", "NOT", "DOT", "FLOATLIT", 
                      "INTLIT", "ILLEGAL_ESCAPE", "UNCLOSE_STRING", "STRINGLIT", 
                      "ID", "LINE_COMMENT", "BLOCK_COMMENT", "WS", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_structDecl = 2
    RULE_structVar = 3
    RULE_varDecl = 4
    RULE_mainDecl = 5
    RULE_funcDecl = 6
    RULE_returnType = 7
    RULE_paramList = 8
    RULE_param = 9
    RULE_type = 10
    RULE_block = 11
    RULE_stmt = 12
    RULE_assignStmt = 13
    RULE_lhs = 14
    RULE_ifStmt = 15
    RULE_whileStmt = 16
    RULE_forStmt = 17
    RULE_forInit = 18
    RULE_forUpdate = 19
    RULE_switchStmt = 20
    RULE_switchCase = 21
    RULE_defaultCase = 22
    RULE_breakStmt = 23
    RULE_continueStmt = 24
    RULE_returnStmt = 25
    RULE_returnVoidStmt = 26
    RULE_exprStmt = 27
    RULE_expr = 28
    RULE_assignExpr = 29
    RULE_logicalOrExpr = 30
    RULE_logicalAndExpr = 31
    RULE_equalityExpr = 32
    RULE_relationalExpr = 33
    RULE_additiveExpr = 34
    RULE_multiplicativeExpr = 35
    RULE_unaryExpr = 36
    RULE_postfixExpr = 37
    RULE_funcCall = 38
    RULE_argList = 39
    RULE_memberAccess = 40
    RULE_primaryExpr = 41

    ruleNames =  [ "program", "decl", "structDecl", "structVar", "varDecl", 
                   "mainDecl", "funcDecl", "returnType", "paramList", "param", 
                   "type", "block", "stmt", "assignStmt", "lhs", "ifStmt", 
                   "whileStmt", "forStmt", "forInit", "forUpdate", "switchStmt", 
                   "switchCase", "defaultCase", "breakStmt", "continueStmt", 
                   "returnStmt", "returnVoidStmt", "exprStmt", "expr", "assignExpr", 
                   "logicalOrExpr", "logicalAndExpr", "equalityExpr", "relationalExpr", 
                   "additiveExpr", "multiplicativeExpr", "unaryExpr", "postfixExpr", 
                   "funcCall", "argList", "memberAccess", "primaryExpr" ]

    EOF = Token.EOF
    SEMI=1
    COMMA=2
    LPAREN=3
    RPAREN=4
    LBRACE=5
    RBRACE=6
    COLON=7
    INT=8
    FLOAT=9
    STRING=10
    AUTO=11
    VOID=12
    MAIN=13
    BREAK=14
    CASE=15
    CONTINUE=16
    DEFAULT=17
    ELSE=18
    FOR=19
    IF=20
    RETURN=21
    STRUCT=22
    SWITCH=23
    WHILE=24
    EQ=25
    NEQ=26
    LE=27
    GE=28
    OR=29
    AND=30
    INC=31
    DEC=32
    ASSIGN=33
    LT=34
    GT=35
    PLUS=36
    MINUS=37
    MUL=38
    DIV=39
    MOD=40
    NOT=41
    DOT=42
    FLOATLIT=43
    INTLIT=44
    ILLEGAL_ESCAPE=45
    UNCLOSE_STRING=46
    STRINGLIT=47
    ID=48
    LINE_COMMENT=49
    BLOCK_COMMENT=50
    WS=51
    ERROR_CHAR=52

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(TyCParser.EOF, 0)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.DeclContext)
            else:
                return self.getTypedRuleContext(TyCParser.DeclContext,i)


        def getRuleIndex(self):
            return TyCParser.RULE_program




    def program(self):

        localctx = TyCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 84
                self.decl()
                self.state = 87 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 281474980912896) != 0)):
                    break

            self.state = 89
            self.match(TyCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(TyCParser.VarDeclContext,0)


        def mainDecl(self):
            return self.getTypedRuleContext(TyCParser.MainDeclContext,0)


        def funcDecl(self):
            return self.getTypedRuleContext(TyCParser.FuncDeclContext,0)


        def structDecl(self):
            return self.getTypedRuleContext(TyCParser.StructDeclContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_decl




    def decl(self):

        localctx = TyCParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.state = 95
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.varDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.mainDecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 93
                self.funcDecl()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 94
                self.structDecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRUCT(self):
            return self.getToken(TyCParser.STRUCT, 0)

        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def LBRACE(self):
            return self.getToken(TyCParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(TyCParser.RBRACE, 0)

        def SEMI(self):
            return self.getToken(TyCParser.SEMI, 0)

        def structVar(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.StructVarContext)
            else:
                return self.getTypedRuleContext(TyCParser.StructVarContext,i)


        def getRuleIndex(self):
            return TyCParser.RULE_structDecl




    def structDecl(self):

        localctx = TyCParser.StructDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_structDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(TyCParser.STRUCT)
            self.state = 98
            self.match(TyCParser.ID)
            self.state = 99
            self.match(TyCParser.LBRACE)
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 281474976712448) != 0):
                self.state = 100
                self.structVar()
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 106
            self.match(TyCParser.RBRACE)
            self.state = 107
            self.match(TyCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructVarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(TyCParser.TypeContext,0)


        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def SEMI(self):
            return self.getToken(TyCParser.SEMI, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_structVar




    def structVar(self):

        localctx = TyCParser.StructVarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_structVar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.type_()
            self.state = 110
            self.match(TyCParser.ID)
            self.state = 111
            self.match(TyCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(TyCParser.TypeContext,0)


        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def SEMI(self):
            return self.getToken(TyCParser.SEMI, 0)

        def ASSIGN(self):
            return self.getToken(TyCParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(TyCParser.ExprContext,0)


        def AUTO(self):
            return self.getToken(TyCParser.AUTO, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_varDecl




    def varDecl(self):

        localctx = TyCParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_varDecl)
        self._la = 0 # Token type
        try:
            self.state = 128
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8, 9, 10, 48]:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.type_()
                self.state = 114
                self.match(TyCParser.ID)
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==33:
                    self.state = 115
                    self.match(TyCParser.ASSIGN)
                    self.state = 116
                    self.expr()


                self.state = 119
                self.match(TyCParser.SEMI)
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.match(TyCParser.AUTO)
                self.state = 122
                self.match(TyCParser.ID)
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==33:
                    self.state = 123
                    self.match(TyCParser.ASSIGN)
                    self.state = 124
                    self.expr()


                self.state = 127
                self.match(TyCParser.SEMI)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VOID(self):
            return self.getToken(TyCParser.VOID, 0)

        def MAIN(self):
            return self.getToken(TyCParser.MAIN, 0)

        def LPAREN(self):
            return self.getToken(TyCParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(TyCParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(TyCParser.BlockContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_mainDecl




    def mainDecl(self):

        localctx = TyCParser.MainDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_mainDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(TyCParser.VOID)
            self.state = 131
            self.match(TyCParser.MAIN)
            self.state = 132
            self.match(TyCParser.LPAREN)
            self.state = 133
            self.match(TyCParser.RPAREN)
            self.state = 134
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def LPAREN(self):
            return self.getToken(TyCParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(TyCParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(TyCParser.BlockContext,0)


        def returnType(self):
            return self.getTypedRuleContext(TyCParser.ReturnTypeContext,0)


        def paramList(self):
            return self.getTypedRuleContext(TyCParser.ParamListContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_funcDecl




    def funcDecl(self):

        localctx = TyCParser.FuncDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funcDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 136
                self.returnType()


            self.state = 139
            self.match(TyCParser.ID)
            self.state = 140
            self.match(TyCParser.LPAREN)
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 281474976712448) != 0):
                self.state = 141
                self.paramList()


            self.state = 144
            self.match(TyCParser.RPAREN)
            self.state = 145
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(TyCParser.TypeContext,0)


        def VOID(self):
            return self.getToken(TyCParser.VOID, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_returnType




    def returnType(self):

        localctx = TyCParser.ReturnTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_returnType)
        try:
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8, 9, 10, 48]:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.type_()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.match(TyCParser.VOID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.ParamContext)
            else:
                return self.getTypedRuleContext(TyCParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.COMMA)
            else:
                return self.getToken(TyCParser.COMMA, i)

        def getRuleIndex(self):
            return TyCParser.RULE_paramList




    def paramList(self):

        localctx = TyCParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.param()
            self.state = 156
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 152
                self.match(TyCParser.COMMA)
                self.state = 153
                self.param()
                self.state = 158
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(TyCParser.TypeContext,0)


        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_param




    def param(self):

        localctx = TyCParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.type_()
            self.state = 160
            self.match(TyCParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(TyCParser.INT, 0)

        def FLOAT(self):
            return self.getToken(TyCParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(TyCParser.STRING, 0)

        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_type




    def type_(self):

        localctx = TyCParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 281474976712448) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(TyCParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(TyCParser.RBRACE, 0)

        def varDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.VarDeclContext)
            else:
                return self.getTypedRuleContext(TyCParser.VarDeclContext,i)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.StmtContext)
            else:
                return self.getTypedRuleContext(TyCParser.StmtContext,i)


        def getRuleIndex(self):
            return TyCParser.RULE_block




    def block(self):

        localctx = TyCParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.match(TyCParser.LBRACE)
            self.state = 169
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 451012397190952) != 0):
                self.state = 167
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                if la_ == 1:
                    self.state = 165
                    self.varDecl()
                    pass

                elif la_ == 2:
                    self.state = 166
                    self.stmt()
                    pass


                self.state = 171
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 172
            self.match(TyCParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignStmt(self):
            return self.getTypedRuleContext(TyCParser.AssignStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(TyCParser.IfStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(TyCParser.WhileStmtContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(TyCParser.ForStmtContext,0)


        def switchStmt(self):
            return self.getTypedRuleContext(TyCParser.SwitchStmtContext,0)


        def breakStmt(self):
            return self.getTypedRuleContext(TyCParser.BreakStmtContext,0)


        def continueStmt(self):
            return self.getTypedRuleContext(TyCParser.ContinueStmtContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(TyCParser.ReturnStmtContext,0)


        def exprStmt(self):
            return self.getTypedRuleContext(TyCParser.ExprStmtContext,0)


        def block(self):
            return self.getTypedRuleContext(TyCParser.BlockContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_stmt




    def stmt(self):

        localctx = TyCParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_stmt)
        try:
            self.state = 184
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 174
                self.assignStmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 175
                self.ifStmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 176
                self.whileStmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 177
                self.forStmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 178
                self.switchStmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 179
                self.breakStmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 180
                self.continueStmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 181
                self.returnStmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 182
                self.exprStmt()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 183
                self.block()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lhs(self):
            return self.getTypedRuleContext(TyCParser.LhsContext,0)


        def ASSIGN(self):
            return self.getToken(TyCParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(TyCParser.ExprContext,0)


        def SEMI(self):
            return self.getToken(TyCParser.SEMI, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_assignStmt




    def assignStmt(self):

        localctx = TyCParser.AssignStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_assignStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 186
            self.lhs()
            self.state = 187
            self.match(TyCParser.ASSIGN)
            self.state = 188
            self.expr()
            self.state = 189
            self.match(TyCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LhsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.ID)
            else:
                return self.getToken(TyCParser.ID, i)
